--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,16 @@ eureka:
       defaultZone=http://localhost:8761/eureka/:
 server:
   port: 9991
+
+# ACTUATOR INFO
+info:
+  app:
+    name: "Transfers-realization-server"
+    version: "0.0.1"
+    profile: ${spring.profiles.active}
+  serverInfo:
+    port: ${server.port}
+
+feign:
+  hystrix:
+    enabled: true
